<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/teks_menu"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"

        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/burgermenu"
        android:textColor="@color/black"

        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kotakmenu2"
        android:layout_width="156dp"
        android:layout_height="192dp"
        android:layout_marginBottom="404dp"
        android:background="@drawable/kotak_kecil"
        android:backgroundTint="@color/kotakkecil"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kotakmenu1"
        android:layout_width="156dp"
        android:layout_height="192dp"
        android:layout_marginBottom="404dp"
        android:background="@drawable/kotak_kecil"
        android:backgroundTint="@color/kotakkecil"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kotakmenu4"
        android:layout_width="156dp"
        android:layout_height="192dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/kotak_kecil"
        android:backgroundTint="@color/kotakkecil"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kotakmenu3"
        android:layout_width="156dp"
        android:layout_height="192dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/kotak_kecil"
        android:backgroundTint="@color/kotakkecil"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tombol"
        android:layout_width="478dp"
        android:layout_height="83dp"
        android:background="@android:color/holo_blue_dark"
        android:backgroundTint="@color/pink"
        android:elevation="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_chickenburger"
        android:layout_width="136dp"
        android:layout_height="121dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="144dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chickenburger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_cheeseburger"
        android:layout_width="136dp"
        android:layout_height="121dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="144dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cheeseburgerbg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_beefburger"
        android:layout_width="136dp"
        android:layout_height="121dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="412dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/beefburgerbg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_spesialburger"
        android:layout_width="136dp"
        android:layout_height="121dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="412dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/spesialburger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_iconhome"
        android:layout_width="35dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="656dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_iconcart"
        android:layout_width="35dp"
        android:layout_height="48dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="656dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_iconuser"
        android:layout_width="35dp"
        android:layout_height="48dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="656dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_chickenburger"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginTop="264dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/chickenburger"
        android:textColor="@color/black"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kotakmenu1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_harga2"
        android:layout_width="92dp"
        android:layout_height="35dp"
        android:layout_marginTop="292dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/harga2"
        android:textColor="@color/ijo"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kotakmenu1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_cheesebuger"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_marginTop="264dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/cheeseburger"
        android:textColor="@color/black"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_harga5"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:layout_marginTop="292dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/harga5"
        android:textColor="@color/ijo"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_beefburger"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginTop="532dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/beefburger"
        android:textColor="@color/black"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kotakmenu3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_harga6"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginTop="560dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/harga6"
        android:textColor="@color/ijo"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_specialburger"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_marginTop="532dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/specialburger"
        android:textColor="@color/black"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teks_harga7"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginTop="560dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/harga7"
        android:textColor="@color/ijo"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_tambah1"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="300dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_tambah2"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="348dp"
        android:layout_marginTop="300dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_tambah3"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="568dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_tambah4"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="348dp"
        android:layout_marginTop="568dp"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>